# playground

./: readme.md
crud/rest-api/rust-rocket-diesel-postgres/: readme.md
crud/rest-api/rust-rocket-diesel-postgres/src/: main.rs  models.rs
crud/rpc/rust-tonic-butane-postgres/: .env  Cargo.toml  build.rs  readme.md
crud/rpc/rust-tonic-butane-postgres/.butane/: connection.json
crud/rpc/rust-tonic-butane-postgres/.butane/migrations/: state.json
crud/rpc/rust-tonic-butane-postgres/.butane/migrations/20210806_122929600_init/: Artist.table  info.json  pg_down.sql  pg_up.sql
crud/rpc/rust-tonic-butane-postgres/proto/: music.proto
crud/rpc/rust-tonic-butane-postgres/src/: error.rs  lib.rs  models.rs  repo.rs
ray-tracer/in-one-weekend/rust/: .rustfmt.toml  Cargo.toml  readme.md
ray-tracer/in-one-weekend/rust/src/: camera.rs  color.rs  config.rs  lib.rs  ray.rs  vec.rs
ray-tracer/in-one-weekend/rust/src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
rust/ray-traycer/: .rustfmt.toml  Cargo.toml  image.ppm  readme.md
rust/ray-traycer/src/: camera.rs  config.rs  hit.rs  lib.rs  ray.rs  sphere.rs  vec.rs
rust/ray-traycer/src/materials/: metal.rs  mod.rs
