[package]
name = "rpc"
version = "0.1.0"
edition = "2018"

[dependencies]
# gRPC
tonic = "0.5"
prost = "0.8"

# ORM
butane = { version = "0.4.1", features = ["default", "pg"] }

# Runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


[build-dependencies]
tonic-build = "0.5"
