[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["TmLev <sololev27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0"

# Logging
log = "0.4.14"
env_logger = "0.9.0"

# Random
fastrand = "1.5.0"
